--- a/src/components/AboutUs.css
+++ b/src/components/AboutUs.css
@@ -10,10 +10,13 @@
   overflow: hidden;
   padding: 10px;
   align-items: center;
+  background-color: #002060;
 }
 .page-title {
   grid-row: 1;
   margin-bottom: 10px;
+  color: white;
+  background-color: #002060;
 }
 
 .aboutUs-nav {
@@ -32,10 +35,12 @@
   display: inline;
   padding: 1em;
   margin: 0;
-  background-color: #42a5f5;
+  background-color: #ab1010;
   color: white;
   width: 50%;
+  border-color: white;
 }
+
 #headerButton {
   flex: auto;
   flex-direction: column;
@@ -43,6 +48,8 @@
   padding: 1em;
   margin: 0;
   width: 50%;
+  color: white;
+  border-color: white;
 }
 
 .frank {
@@ -52,6 +59,7 @@
   height: 740px;
   overflow: auto;
   padding-top: 10px;
+  background-color: #002060;
 }
 .frank2 {
   display: grid;
@@ -60,6 +68,7 @@
   max-height: 720px;
   overflow: auto;
   padding-top: 10px;
+  background-color: #002060;
 }
 
 .frank2 > img {
@@ -76,6 +85,9 @@
   align-self: center;
   width: 100%;
   max-width: 1000px;
+  background-color: #002060;
+  color: white;
+  margin-top: 10px;
 }
 
 .project-content {
@@ -90,6 +102,7 @@
   align-items: center;
   justify-content: center;
   height: 450px;
+  background-color: #002060;
 }
 
 .about-logo {
@@ -121,20 +134,24 @@
   align-content: end;
   justify-content: end;
   padding: 10px;
+  background-color: #002060;
 }
 .maggie {
   display: flex;
   align-content: end;
   padding: 10px;
+  background-color: #002060;
 }
 .jenn {
   display: flex;
   justify-content: end;
   padding: 10px;
+  background-color: #002060;
 }
 .jared {
   display: flex;
   padding: 10px;
+  background-color: #002060;
 }
 
 .get-in-touch {
@@ -142,5 +159,5 @@
 }
 
 .resource-header {
-  margin-top:10px;
+  margin-top: 10px;
 }
