--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -73,6 +73,98 @@ navbar > a:hover span {
   font-family: "Unna";
 }
 
+.nav-links > li:hover {
+  background-color: #ec1818;
+}
+
+.nav-links {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 775px) {
+  .nav-links a > p {
+    font-size: 12px;
+  }
+}
+
+navbar > a {
+  overflow: hidden;
+  position: relative;
+  display: inline-block;
+  color: black;
+}
+
+navbar > a::before,
+navbar > a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  left: 0;
+}
+navbar > a::before {
+  background-color: #ffffff;
+  height: 2px;
+  bottom: 0;
+  transform-origin: 100% 50%;
+  transform: scaleX(0);
+  transition: transform 0.3s cubic-bezier(0.76, 0, 0.24, 1);
+}
+navbar > a::after {
+  content: attr(data-replace);
+  height: 100%;
+  top: 0;
+  transform-origin: 100% 50%;
+  transform: translate3d(200%, 0, 0);
+  transition: transform 0.3s cubic-bezier(0.76, 0, 0.24, 1);
+  color: #ffffff;
+}
+
+navbar > a:hover::before {
+  transform-origin: 0% 50%;
+  transform: scaleX(1);
+}
+navbar > a:hover::after {
+  transform: translate3d(0, 0, 0);
+  font-size: larger;
+}
+
+navbar > a span {
+  display: inline-block;
+  transition: transform 0.3s cubic-bezier(0.76, 0, 0.24, 1);
+}
+
+navbar > a:hover span {
+  transform: translate3d(-200%, 0, 0);
+}
+
+#navbar {
+  z-index: 98;
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  grid-row: 1;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  height: 50px;
+  background-color: #002060;
+}
+
+.nav-links > li {
+  border: 1px solid black;
+  width: 20px;
+  flex: auto;
+  flex-direction: column;
+  display: block;
+  padding: 1em;
+  padding-top: 0.75em;
+  margin: 0;
+  background-color: rgb(171, 16, 16);
+  text-decoration: none;
+  text-align: center;
+  font-family: "Unna";
+}
+
 .nav-links {
   display: flex;
   width: 100%;
